// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> проверяет работы вызова callback при смене страницы 1`] = `
<WrapperComp
  activePage={1}
  count={151}
  maxButtons={4}
  onSelect={[Function]}
  size={10}
  stepIncrement={10}
>
  <IntlProvider>
    <Pagination
      activePage={1}
      count={151}
      first={false}
      hideSinglePage={true}
      last={false}
      lazy={false}
      maxButtons={4}
      next={false}
      nextText={null}
      onSelect={[Function]}
      prev={false}
      prevText={null}
      showCountRecords={true}
      size={10}
      stepIncrement={10}
      withoutBody={false}
    >
      <nav
        className="n2o-pagination"
        style={
          Object {
            "alignItems": "baseline",
            "display": "flex",
          }
        }
      >
        <ul
          className="pagination d-inline-flex"
        >
          <PaginationButton
            active={true}
            eventKey={1}
            key="1"
            label={1}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item active"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 1,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={2}
            key="2"
            label={2}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 2,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={3}
            key="3"
            label={3}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 3,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={4}
            key="4"
            label={4}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 4,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={5}
            key="5"
            label={5}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 5,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            disabled={true}
            key="ellipsisMiddle"
            label="..."
            noBorder={true}
            tabIndex={-1}
          >
            <li
              className="page-item disabled"
              onClick={[Function]}
            >
              <a
                className="page-link no-border"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "...",
                  }
                }
                href="#"
                tabIndex={-1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            eventKey={11}
            key="11"
            label={11}
            onSelect={[Function]}
            tabIndex={1}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 11,
                  }
                }
                href="#"
                tabIndex={1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            disabled={true}
            key="ellipsisLast"
            label="..."
            noBorder={true}
            tabIndex={-1}
          >
            <li
              className="page-item disabled"
              onClick={[Function]}
            >
              <a
                className="page-link no-border"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "...",
                  }
                }
                href="#"
                tabIndex={-1}
              />
            </li>
          </PaginationButton>
        </ul>
        <span
          className="n2o-pagination-info"
          style={
            Object {
              "display": "inline-flex",
              "paddingLeft": "1rem",
            }
          }
        >
          Всего 151
           
          <FormattedPlural
            few="записи"
            one="запись"
            other="записей"
            style="cardinal"
            value={151}
          >
            <span>
              записей
            </span>
          </FormattedPlural>
        </span>
      </nav>
    </Pagination>
  </IntlProvider>
</WrapperComp>
`;

exports[`<Pagination /> проверяет рендер с дефолтными настройками 1`] = `
<IntlProvider>
  <Pagination
    activePage={1}
    count={1}
    first={false}
    hideSinglePage={true}
    last={false}
    lazy={false}
    maxButtons={4}
    next={false}
    nextText={null}
    prev={false}
    prevText={null}
    showCountRecords={true}
    size={1}
    withoutBody={false}
  />
</IntlProvider>
`;

exports[`<Pagination /> проверяет рендер с классическими настрйоками n2o 1`] = `
<IntlProvider>
  <Pagination
    activePage={1}
    count={151}
    first={false}
    hideSinglePage={true}
    last={false}
    lazy={false}
    maxButtons={4}
    next={false}
    nextText={null}
    prev={false}
    prevText={null}
    showCountRecords={true}
    size={10}
    stepIncrement={10}
    withoutBody={false}
  />
</IntlProvider>
`;

exports[`<Pagination /> проверяет рендер с полным функционалом 1`] = `
<IntlProvider>
  <Pagination
    activePage={1}
    count={151}
    first={true}
    hideSinglePage={true}
    last={true}
    lazy={false}
    maxButtons={4}
    next={true}
    nextText={null}
    prev={true}
    prevText={null}
    showCountRecords={true}
    size={10}
    stepIncrement={10}
    withoutBody={false}
  />
</IntlProvider>
`;
